# INMOST-VORO

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  helpers.cpp  helpers.h  main.cpp  planar_cutter.cpp  planar_cutter.h  voronoi.cpp  voronoi_builder.cpp  voronoi_builder.h
.github/workflows/: tests.yml
scripts/: benchmark.py  generate_random_points.py
src/: benchmark.cpp  main.cpp  voronoi_builder.cpp  voronoi_builder.h
src/voroqh/: README.md  main.cpp  voronoi.cpp  voronoi.hpp
src/voroqh/quickhull/: .gitignore  HalfEdgeMesh.hpp  QuickHull.cpp
src/voroqh/quickhull/TestsSrc/: README.md
voroqh/: main.cpp  tests.cpp  voronoi.cpp  voronoi.hpp
voroqh/quickhull/: QuickHull.cpp  QuickHull.hpp  QuickHullTests
